--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Wordle</title>
 	</head>
 	<body>
-		<div class="guess-grid">
+		<div data-guess-grid class="guess-grid">
 			<div class="tile"></div>
 			<div class="tile"></div>
 			<div class="tile"></div>
